--- a/forum/templates/forum/newthread.html
+++ b/forum/templates/forum/newthread.html
@@ -16,10 +16,11 @@
 {% block content %}
 
 <h2>{% trans "Create a Thread" %}</h2>
-<form method='post' action='../preview/'>{% csrf_token %}
+<form method='post' action='./'>{% csrf_token %}
+{% if form.errors %}<ul>{{ form.errors.as_ul }}</ul>{% endif %}
 <p><label>{% trans "Posting As" %}</label><span>{{ user.username }}</span></p>
-<ul>{{ form.as_ul }}</ul>
-<p><input type='submit' name='preview' value='{% trans "Preview your post!" %}' /></p>
+{{ form.as_p }}
+<p><input type='submit' value='{% trans "Post" %}' /></p>
 </form>
 
 {% endblock %}
