--- a/forum/templates/forum_base.html
+++ b/forum/templates/forum_base.html
@@ -1,6 +1,6 @@
 {% load i18n %}<html>
 <head>
-<title>{% block title %}{% endblock %}</title>
+<title>{% block title %}Forum{% endblock %}</title>
 <link rel="alternate" type="application/rss+xml" title="{% trans "All Latest Posts via RSS" %}" href="{% url 'forum_index' %}rss/" />
 <link rel="alternate" type="application/atom+xml" title="{% trans "All Latest Posts via ATOM" %}" href="{% url 'forum_index' %}atom/" />
 {% block extrahead %}{% endblock %}
